Updated GameService:  + Added new attribute in matches table on the schema: rules  + Added new rules type with default match rules  + Added new param to MatchRepository function to create a match: rules  + Added new param to MatchService function to create a match: rules  + Added rules validation in game.schemas.  + Updated tests and added new ones to cover new rules param  + Updated openapi.yaml to include new rules param.
